--- a/plugin.xml
+++ b/plugin.xml
@@ -1,40 +1,31 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.tranware.IDTech-Shuttle" version="0.0.8" xmlns="http://www.phonegap.com/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>IDTech Shuttle Card Reader</name>
-    <description>Allow using the IDTech Shuttle Card Reader with PhoneGap apps</description>
-    <author email="dev@tranware.com" href="http://www.tranware.com">Universal Tranware, LLC</author>
-    <license>Apache 2.0</license>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    id="com.idtechproducts.uniMagPlugin"
+    version="2.0">
+    <name>uniMagPlugin</name>
+    <description>
+        The cordova plugin for the IDTECH uniMag. Can support the 64bit iOS (need the cordova version above 3.4.1).
+    </description>
     
-    <keywords>magtek,card reader,credit card,reader</keywords>
-
-    <engines>
-        <engine name="cordova" version=">3.0.0" />
-    </engines>
-
-    <platform name="ios">    
+    <license>Apache 2.0</license>
+    <keywords>cordova,IDTECH,uniMag</keywords>
+    <js-module src="www/uniMagPlugin.js" name="uniMagPlugin">
+        <clobbers target="UniMag" />
+    </js-module>
+    
+    <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="com.tranware.IDTech-Shuttle">
-                <param name="ios-package" value="IDTechShuttlePlugin" />
+            <feature name="uniMagPlugin">
+                <param name="ios-package" value="CDVuniMagPlugin"/>
             </feature>
         </config-file>
         
-        <js-module src="www/js/unimag.js" name="unimag">
-            <clobbers target="cordova.plugins.unimag" />
-        </js-module>
+        <header-file src="src/ios/CDVuniMagPlugin.h"/>
+        <header-file src="src/ios/uniMag.h"/>
+        <source-file src="src/ios/CDVuniMagPlugin.m"/>
+        <source-file src="src/ios/IDTECH_UniMag.a" framework="true"/>
 
-        <header-file src="src/ios/CDVUniMag.h" />
-        <source-file src="src/ios/CDVUniMag.m" />
-        
-        <header-file src="src/ios/uniMag.h" />
-        <source-file src="src/ios/IDTECH_UniMag.a" framework="true" />
-        
-        <framework src="libstdc++.dylib" />
-        <framework src="avfoundation.framework" />
-        <framework src="mediaplayer.framework"  />
-        <framework src="audiotoolbox.framework" />
-        <framework src="foundation.framework" />
-        <framework src="externalaccessory.framework" />
+        <framework src="MediaPlayer.framework" />
+        <framework src="AudioToolbox.framework" />
     </platform>
-
-   
 </plugin>
